# rysiek

./: .gitignore  README.md  encoder.py
docs/: nucleo8png
docs/kokos-2025/dokumentacja-techniczna/: build.sh  main.tex  open.sh  rysiek_dokumentacja_techniczna.tex
docs/kokos-2025/dokumentacja-techniczna/figures/: opisy.drawio
docs/kokos-2025/umocowanie/: build.sh  open.sh  umocowanie.tex
jetson-orin-nano/: pyproject.toml  run_app.py  train_model.ipynb
jetson-orin-nano/app/: main.py  main2.py  main3.py  main4.py  nucleocom.py  picocom.py
jetson-orin-nano/data/: gesture_labels.csv
jetson-orin-nano/data/gestures/: 0.csv  1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
jetson-orin-nano/model/: gesture_classifier.hdf5  gesture_classifier.tflite
nucleo/hackatonL476/: .cproject  .mxproject  .project  hackatonL476.ioc
nucleo/hackatonL476/Core/Inc/: main.h  protocol.h  stm32l4xx_it.h
nucleo/hackatonL476/Core/Src/: main.c  protocol.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
raspberry-pi/: detector.py  read_detect.py  read_detect_d.py  read_detect_nd.py  reader.py
